kustomize/apps/vms/frontend-new-admin/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: frontend-new-admin
    app.kubernetes.io/component: vms-frontend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: frontend-new-admin
  namespace: vms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend-new-admin
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend-new-admin
        app.kubernetes.io/component: vms-frontend
        app.kubernetes.io/part-of: vms
        global-app-name: vsaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: frontend-new-admin
                topologyKey: kubernetes.io/hostname
      containers:
        - name: frontend-new-admin
          image: download.aipix.ai:8443/vms-frontend-new-admin/release:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     scheme: HTTP
          #     path: /admin/v2
          #     port: 80
          # readinessProbe:
          #   httpGet:
          #     scheme: HTTP
          #     path: /
          #     port: 80
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 25Mi
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: vms-frontend-admin-nginx
              readOnly: true
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf.d/default.conf
              name: vms-frontend-admin-nginx
              readOnly: true
              subPath: default.conf
      imagePullSecrets:
        - name: download-aipix-ai
      hostname: frontend-new-admin
      restartPolicy: Always
      volumes:
        - name: vms-frontend-admin-nginx
          configMap:
            name: vms-frontend-admin-nginx
