kustomize/apps/vms/frontend-new-admin/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: frontend-new-admin
  namespace: vms
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host (`example.com`) && PathPrefix(`/admin`)
      middlewares:
        - name: strip-prefix-frontend-new-admin
      services:
        - kind: Service
          name: frontend-new-admin
          port: 80
